social incons on mobile changing color fixed

--- a/public/style.css
+++ b/public/style.css
@@ -65,9 +65,6 @@ ul {
 .fiver {
   height: 4rem;
 }
-.social-link-instagram {
-  display: inherit;
-}
 
 a[class="social-white"],
 a:link[class="social-white"],
